--- a/app/src/main/res/layout/activity_books.xml
+++ b/app/src/main/res/layout/activity_books.xml
@@ -6,10 +6,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BooksActivity">
 
-    <ListView
+    <fragment android:name="br.com.jcnaveia.biblia.BooksFragment"
+        android:id="@+id/books_fragment"
+        android:layout_weight="1"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/listViewBooks" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
 
